methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:2: error: not found: value un1
  run1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();un1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();un1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();
                                                                                      ^MethodsPictureLarge:2: error: not found: value un1
  run1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();un1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();un1();run1();run1();gauche();avance();avance();avance();avance();avance();droite();
                                                                                                                                                                         ^